Fix: prevent scrollbar

--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
 
 body {
 	background-color: #222;
-	height: 100vh;
+	height: 99vh;
 	padding: 5px;
 }
 
